docs/7.57/md/abenldb_reporting_statements.md
---
title: "LDB - Statements for Logical Databases"
description: |
  The following additions and statements are only intended for use in executable programs that are linked with logical databases: -   Addition NO DATABASE SELECTION(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect-options_no_db_sel.htm) of the statement SELECT-OPTIONS -   Event
version: "7.57"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenldb_reporting_statements.htm"
abapFile: "abenldb_reporting_statements.htm"
keywords: ["select", "do", "if", "data", "abenldb", "reporting", "statements"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_storage_obsolete.htm) →  [Logical Databases (LDB, Obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenldb.htm) →  [LDB - Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenldb_abap_statements.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: LDB - Statements for Logical Databases, ABENLDB_REPORTING_STATEMENTS, 757%0D%0A%0D%0A
Error:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

LDB - Statements for Logical Databases

The following additions and statements are only intended for use in executable programs that are linked with logical databases:

-   Addition [NO DATABASE SELECTION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect-options_no_db_sel.htm) of the statement SELECT-OPTIONS
-   Event block [GET node](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapget-.htm)
-   Event block [END-OF-SELECTION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapend-of-selection.htm)
-   Statement [CHECK SELECT-OPTIONS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcheck_select-options.htm)
-   Statement [REJECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapreject.htm)

The following addition is only intended for calling an executable program that is linked with a logical database:

-   Statement [SUBMIT WITH FREE SELECTIONS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsubmit_selscreen_parameters.htm)

If logical databases are no longer used, these language elements are obsolete.

Continue
[SELECT-OPTIONS, NO DATABASE SELECTION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect-options_no_db_sel.htm)
[GET node](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapget-.htm)
[END-OF-SELECTION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapend-of-selection.htm)
[CHECK SELECT-OPTIONS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcheck_select-options.htm)
[REJECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapreject.htm)